--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,21 @@
             <artifactId>vlcj</artifactId>
             <version>4.8.3</version>
         </dependency>
+        <dependency>
+            <groupId>uk.co.caprica</groupId>
+            <artifactId>vlcj-natives</artifactId>
+            <version>4.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-jpms</artifactId>
+            <version>5.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna-platform-jpms</artifactId>
+            <version>5.14.0</version>
+        </dependency>
     </dependencies>
 
     <build>
