--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,11 @@
             <artifactId>jna-platform-jpms</artifactId>
             <version>5.14.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
