--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <version>2.17.1</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.17.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>flatlaf-fonts-inter</artifactId>
             <version>4.1</version>
